# iblessing

./: .gitignore  .gitmodules  .travis.yml  README.md  compile-cmake.command  compile-cmake.sh  compile.command  compile.sh  copy-headers.sh  run-test.command  run-test.sh
app-bundle/: Info.plist  (+1 more)
cmake-test/: CMakeLists.txt
cmake-test/src/: main.cpp
iblessing/: CMakeLists.txt
iblessing/Tests/: Tests.m
iblessing/iblessing/: iblessing.entitlements  main-old.cpp  main.cpp
iblessing/iblessing-core/: iblessing_core.cpp  iblessing_core.hpp  iblessing_corePriv.hpp
iblessing/iblessing-core/common/macro/: CommonDefines.hpp
iblessing/iblessing-core/core/disasm/: ARM64Disasembler.hpp  ARM64Registers.cpp  ARM64Registers.hpp  ARM64ThreadState.cpp  ARM64ThreadState.hpp
iblessing/iblessing-core/core/dyld/: DyldSimulator.cpp  DyldSimulator.hpp
iblessing/iblessing-core/core/foundation/: CoreFoundation.cpp  CoreFoundation.hpp
iblessing/iblessing-core/core/memory/: VirtualMemory.cpp  VirtualMemory.hpp  VirtualMemoryV2.cpp  VirtualMemoryV2.hpp
iblessing/iblessing-core/core/polyfill/: mach-universal.hpp
iblessing/iblessing-core/core/runtime/: ARM64Runtime.cpp  ARM64Runtime.hpp  ObjcBlock.hpp  ObjcCategory.cpp  ObjcCategory.hpp  ObjcClass.cpp  ObjcClass.hpp  ObjcIvar.cpp  ObjcIvar.hpp  ObjcMethod.cpp  ObjcMethod.hpp  ObjcObject.cpp  ObjcObject.hpp  ObjcProperty.cpp  ObjcProperty.hpp  ObjcRuntime.cpp  ObjcRuntime.hpp  SimpleSimProcedure.cpp  SimpleSimProcedure.hpp
iblessing/iblessing-core/core/structs/: Foundation.cpp  Foundation.hpp
iblessing/iblessing-core/core/symtab/: StringTable.cpp  StringTable.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
iblessing/iblessing-core/core/unicorn/: UnicornARM64Runtime.cpp  UnicornARM64Runtime.hpp
iblessing/iblessing-core/infra/: Map.hpp  Object.cpp  Object.hpp  Vector.hpp
iblessing/iblessing-core/scanner/: AppInfoScanner.mm  CocoaAppInfoScanner.cpp  ObjcClassXrefScanner.cpp  ObjcMethodXrefScanner.cpp  ObjcUnserializationScanner.cpp  PredicateScanner.cpp  PredicateScanner.hpp  Scanner.hpp  SymbolWrapperScanner.cpp  SymbolWrapperScanner.hpp  SymbolXREFScanner.cpp
iblessing/iblessing-core/scanner/context/: ScannerContext.cpp  ScannerContext.hpp  ScannerContextManager.cpp  ScannerContextManager.hpp  ScannerWorkDirManager.cpp  ScannerWorkDirManager.hpp
iblessing/iblessing-core/scanner/dispatcher/: ScannerDispatcher.cpp  ScannerDispatcher.hpp
iblessing/iblessing-core/scanner/driver/: ScannerDisassemblyDriver.cpp  ScannerDisassemblyDriver.hpp
iblessing/iblessing-core/v2/: iblessing-core.hpp
iblessing/iblessing-core/v2/common/: ibtypes.h
iblessing/iblessing-core/v2/dyld/: dyld.cpp  dyld.hpp
iblessing/iblessing-core/v2/example/: classdump.cpp  classdump.hpp  otool.cpp
iblessing/iblessing-core/v2/mach-o/: mach-o.hpp
iblessing/iblessing-core/v2/memory/: memory.cpp  memory.hpp
iblessing/iblessing-core/v2/objc/: objc.cpp  objc.hpp
iblessing/iblessing-core/v2/util/: StringUtils.cpp  StringUtils.h
iblessing/iblessing-core/v3/debugger/: uc_debugger_utils.cpp  uc_debugger_utils.hpp
iblessing/iblessing-core/v3/dyld/: DyldSharedCache.cpp  DyldSharedCache.hpp  MachOFile.cpp  MachOFile.hpp  dyld-sharedcache-loader.cpp  dyld-sharedcache-loader.hpp  dyld2.cpp  dyld2.hpp  dyld_cache_format.h  dyld_images.h
iblessing/iblessing-core/v3/fs/: darwin-file-system.cpp  darwin-file-system.hpp
iblessing/iblessing-core/v3/log/: buffered_logger.cpp  buffered_logger.hpp
iblessing/iblessing-core/v3/mach-o/: macho-loader.cpp  macho-loader.hpp  macho-memory.cpp  macho-memory.hpp  macho-module.cpp  macho-module.hpp
iblessing/iblessing-core/v3/machine/: aarch64-machine.cpp  aarch64-machine.hpp  aarch64-utils.cpp  aarch64-utils.hpp
iblessing/iblessing-mac-sample/: main.m
iblessing/iblessing-sample/: AppDelegate.h  AppDelegate.m  SwiftTest.swift  ViewController.h  ViewController.m  main.m  xpc.h
iblessing/iblessing-sample/insecureUnserialization/: InsecureUnSerialization.h  InsecureUnSerialization.m
iblessing/iblessing-sample/methodChain/: MethodChainClasses.h  MethodChainClasses.m  NSString+IBS.h  NSString+IBS.m
iblessing/iblessing.xcodeproj/: project.pbxproj
iblessing/iblessing.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iblessing/iblessing/builtin/: CocoaAppInfoScanner.cpp  CocoaAppInfoScanner.hpp  ObjcClassXrefScanner.hpp  ObjcUnserializationScanner.cpp  PredicateScanner.cpp  SymbolXREFScanner.cpp
iblessing/iblessing/domain/: ObjcMethodChain.hpp
iblessing/iblessing/generator/: Generator.hpp  GeneratorDispatcher.cpp  GeneratorDispatcher.hpp  IDAObjcMsgXREFGenerator.cpp  IDASymbolWrapperNamingScriptGenerator.cpp  IDASymbolicScriptGenerator.cpp  ObjcMsgXREFReportGenerator.cpp  ObjcMsgXREFReportGenerator.hpp  ObjcMsgXREFServerGenerator.cpp  ObjcMsgXREFStatisticsGenerator.cpp  ObjcMsgXREFStatisticsGenerator.hpp
iblessing/iblessing/infra/: Map.hpp  Object.cpp  Object.hpp  Vector.hpp
iblessing/iblessing/registry/: PluginRegistry.cpp  PluginRegistry.h
iblessing/iblessing/scanner/: AppInfoScanner.hpp  AppInfoScanner.mm  CocoaAppInfoScanner.cpp  ObjcClassXrefScanner.cpp  ObjcClassXrefScanner.hpp  ObjcMethodXrefScanner.cpp  ObjcMethodXrefScanner.hpp  ObjcUnserializationScanner.cpp  ObjcUnserializationScanner.hpp  PredicateScanner.cpp  PredicateScanner.hpp  Scanner.cpp  Scanner.hpp  ScannerDispatcher.cpp  SymbolWrapperScanner.cpp  SymbolWrapperScanner.hpp  SymbolXREFScanner.cpp  SymbolXREFScanner.hpp
iblessing/iblessing/serialization/: ObjcMethodCallSnapshotSerializationManager.cpp  ObjcMethodChainSerializationManager.cpp  ObjcMethodChainSerializationManager.hpp  SymbolWrapperSerializationManager.cpp  SymbolWrapperSerializationManager.hpp
iblessing/iblessing/tests/: TestManager.cpp  TestManager.hpp  TestObjcMethodXrefs.cpp  TestObjcMethodXrefs.hpp  Tester.cpp  Tester.hpp
iblessing/iblessing/util/: StringUtils.cpp  StringUtils.h
iblessing/plugin-example/: main.cpp
iblessing/plugin-example/example/: classdump.cpp  otool.cpp
iblessing/plugins/simprocedure/: iblessing-simple-simprocedure.json
(+263 files in other folders)
